Revert "Style changes to deal with overflow issues"
This reverts commit dbb18a2c536c790b46f1caa494b8400b16d5ba35.

--- a/style.css
+++ b/style.css
@@ -2,7 +2,10 @@ html {
     scroll-behavior: smooth;
 }
 body {
+    overflow-x: scroll;
+    overflow-y: hidden;
     width: auto;
+    max-height: 100vh;
     font-family: "Times New Roman";
     font-size: 21px;
     margin: 0;
@@ -34,6 +37,8 @@ body {
 #main-story,
 #other-story {
     width: fit-content;
+    overflow-x: scroll;
+    overflow-y: hidden;
     display: flex;
     float: left;
 }
@@ -43,6 +48,8 @@ body {
     max-width: 480px;
     padding-left: 24px;
     padding-right: 24px;
+    height: 100vh;
+    overflow-y: scroll;
 }
 @media screen and (max-width: 768px) {
     .story-wrapper {
@@ -66,13 +73,12 @@ a {
     height: 36px;
     position: absolute;
     width: calc(30vw - 24px);
-    max-width: 504px;
+    max-width: 480px;
     background-color: white;
     padding-top: 16px;
     margin-left: -24px;
     padding-left: 24px;
     color:#382d1b;
-    position: fixed;
 }
 @media screen and (max-width: 768px) {
     .story-header {
